external-projects/sui-prover/crates/sui-prover/tests/snapshots/reals.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/reals.fail.move:21:3
   │
21 │   ensures(y_real  != y_real);
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/reals.fail.move:16: foo_spec
   =         y_real#1#0 = 1.0/7.0
   =     at tests/inputs/reals.fail.move:21: foo_spec
